# semantic-release-uv

./: CHANGELOG.md  duck.py  main.py  my_bdd.duckdb  pyproject.toml
.github/workflows/: release.yml
src/: main.py  transform.py
src/models/: nyc.py
